--- a/notebook/EDGAR.ipynb
+++ b/notebook/EDGAR.ipynb
@@ -10,9 +10,16 @@
         "import pandas as pd\n",
         "import json\n",
         "import time\n",
-        "import random\n",
-        "\n",
-        "def fetch_sec_facts_by_sic(company_data, sic_code, headers, user_start, user_end, limit=None):\n",
+        "import random"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def fetch_sec_facts_by_sic(industry_mapping, sic_code, headers, user_start, user_end, limit=None):\n",
         "    \"\"\"\n",
         "    Fetch SEC XBRL company facts for companies with a specific SIC code.\n",
         "\n",
@@ -27,7 +34,7 @@
         "    Returns:\n",
         "        pd.DataFrame: Filtered DataFrame containing SEC facts.\n",
         "    \"\"\"\n",
-        "    filtered_cik_list = company_data[company_data['SIC_code'] == sic_code]['cik_str'].tolist()\n",
+        "    filtered_cik_list = industry_mapping[industry_mapping['2022 NAICS Code'].astype(str).str[:2] == sic_code]['cik_str'].tolist()\n",
         "    ciks = filtered_cik_list if limit is None else filtered_cik_list[:limit]\n",
         "\n",
         "    all_data = []\n",
@@ -90,86 +97,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "id": "KiQF8lqzvwfU"
-      },
-      "outputs": [],
-      "source": [
-        "import requests\n",
-        "import pandas as pd\n",
-        "\n",
-        "def get_company_data_with_sic(sic_csv_path, headers=None):\n",
-        "    \"\"\"\n",
-        "    Fetch SEC company ticker data and merge it with SIC codes from a local CSV.\n",
-        "\n",
-        "    Args:\n",
-        "        sic_csv_path (str): Path to the CSV file that contains 'cik_str' and 'SIC_code'.\n",
-        "        headers (dict, optional): Headers for SEC API requests. Defaults to standard User-Agent.\n",
-        "\n",
-        "    Returns:\n",
-        "        pd.DataFrame: Merged DataFrame with SEC ticker data and SIC codes.\n",
-        "    \"\"\"\n",
-        "    if headers is None:\n",
-        "        headers = {'User-Agent': 'your.email@example.com'}\n",
-        "\n",
-        "    try:\n",
-        "        # Fetch company tickers from SEC\n",
-        "        response = requests.get(\n",
-        "            \"https://www.sec.gov/files/company_tickers.json\",\n",
-        "            headers=headers\n",
-        "        )\n",
-        "        response.raise_for_status()\n",
-        "\n",
-        "        # Load into DataFrame\n",
-        "        company_data = pd.DataFrame.from_dict(response.json(), orient='index')\n",
-        "        company_data['cik_str'] = company_data['cik_str'].astype(str).str.zfill(10)\n",
-        "\n",
-        "        # Load and clean your local SIC mapping\n",
-        "        sic_mapping = pd.read_csv(sic_csv_path)\n",
-        "        sic_mapping['cik_str'] = sic_mapping['cik_str'].astype(str).str.zfill(10)\n",
-        "        sic_mapping['SIC_code'] = (\n",
-        "            sic_mapping['SIC_code']\n",
-        "            .fillna(0)\n",
-        "            .astype(float)\n",
-        "            .astype(int)\n",
-        "            .astype(str)\n",
-        "        )\n",
-        "\n",
-        "        # Merge on cik_str\n",
-        "        merged_data = pd.merge(company_data, sic_mapping, on='cik_str', how='left')\n",
-        "        return merged_data\n",
-        "\n",
-        "    except (requests.RequestException, ValueError, KeyError) as e:\n",
-        "        print(f\"Error retrieving or processing company data: {e}\")\n",
-        "        return pd.DataFrame()\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "headers = {'User-Agent': \"mbambal@purdue.edu\"}\n",
         "\n",
-        "sic_mapping_file = '/Users/mayankbambal/Desktop/10K_API/data/mapping/company_tickers.csv'\n",
+        "industry_mapping_file = '/Users/mayankbambal/Desktop/10K_API/data/mapping/industrymapping.csv'\n",
         "\n",
-        "company_data = get_company_data_with_sic(sic_mapping_file, headers)\n",
-        "\n",
+        "industry_mapping = pd.read_csv(industry_mapping_file)\n",
         "# Get user input\n",
         "\n",
-        "sic_code = input(\"Enter SIC code: \")\n",
+        "naics = input(\"Enter 2 Digit NAICS code: \")\n",
         "user_start = int(input(\"Enter start period (YYYY): \"))\n",
         "user_end = int(input(\"Enter end period (YYYY): \"))\n",
         "\n",
         "#Download data\n",
         "\n",
-        "data_10k = fetch_sec_facts_by_sic(company_data, sic_code, headers, user_start, user_end, limit=5)\n",
+        "data_10k = fetch_sec_facts_by_sic(industry_mapping, naics, headers, user_start, user_end, limit=5)\n",
         "\n",
         "\n",
         "# Save data to csv\n",
-        "data_10k.to_csv(f'{sic_code}_{user_start}_{user_end}data_10k.csv', index=False)"
+        "data_10k.to_csv(f'{naics}_{user_start}_{user_end}data_10k.csv', index=False)"
       ]
     },
     {
@@ -177,7 +126,71 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "\n",
+        "df = data_10k\n",
+        "\n",
+        "# ------------------------------\n",
+        "# Define which fact_names should be labeled \"Revenue\" in the StandardName column\n",
+        "# ------------------------------\n",
+        "valid_labels = [\n",
+        "    \"Revenue\",\n",
+        "    \"Revenue, Net (Deprecated 2018-01-31)\",\n",
+        "    \"Revenues\",\n",
+        "    \"Sales Revenue\",\n",
+        "    \"RevenueFromContractWithCustomerExcludingAssessedTax\"\n",
+        "]\n",
+        "\n",
+        "# ------------------------------\n",
+        "# Create a new column \"StandardName\" that defaults to the original fact_name\n",
+        "# For the 'valid_labels', overwrite StandardName to \"Revenue\".\n",
+        "# ------------------------------\n",
+        "df[\"StandardName\"] = df[\"fact_name\"]  # keep original KPI names by default\n",
+        "df.loc[df[\"fact_name\"].isin(valid_labels), \"StandardName\"] = \"Revenue\"\n",
+        "\n",
+        "# ------------------------------\n",
+        "# Ensure fiscal year (fy) exists or fallback to extracting year from 'end' date\n",
+        "# ------------------------------\n",
+        "if 'fy' not in df.columns or df['fy'].isnull().all():\n",
+        "    df['fy'] = pd.to_datetime(df['end'], errors='coerce').dt.year\n",
+        "\n",
+        "# ------------------------------\n",
+        "# Define a function to get the range of years for each group\n",
+        "# ------------------------------\n",
+        "def year_range(fy_series):\n",
+        "    years = sorted(fy_series.dropna().unique())\n",
+        "    if len(years) == 0:\n",
+        "        return \"N/A\"\n",
+        "    return f\"{years[0]} - {years[-1]}\"\n",
+        "\n",
+        "# ------------------------------\n",
+        "# Group by Company, CIK, StandardName, ReportedName and summarize years used\n",
+        "# ------------------------------\n",
+        "kpi_summary = (\n",
+        "    df.groupby([\"entityName\", \"cik\", \"StandardName\", \"label\"])\n",
+        "      .agg(Years_Used=('fy', year_range))\n",
+        "      .reset_index()\n",
+        ")\n",
+        "\n",
+        "# ------------------------------\n",
+        "# Rename columns for the output\n",
+        "# ------------------------------\n",
+        "kpi_summary.rename(columns={\n",
+        "    \"entityName\": \"Company\",\n",
+        "    \"cik\": \"CIK\",\n",
+        "    \"label\": \"ReportedName\",\n",
+        "    \"Years_Used\": \"Years Used\"\n",
+        "}, inplace=True)\n",
+        "\n",
+        "# ------------------------------\n",
+        "# Export to CSV\n",
+        "# ------------------------------\n",
+        "output_file = \"Revenue_KPI_Mapping.csv\"\n",
+        "kpi_summary.to_csv(output_file, index=False)\n",
+        "print(f\"All KPI mapping (with revenue renamed) created and saved to {output_file}\")"
+      ]
     }
   ],
   "metadata": {
